welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:18: error: ';' expected but 'if' found.
}if (estFaceMur==true) {droite()
 ^